[package]
name = "clio"
version = "0.1.0"
edition = "2021"
description = "A small log redirection utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
nix = { version = "0.29.0", features = ["signal", "process"] }
tokio = { version = "1.38.0", features = ["process", "signal", "rt", "rt-multi-thread", "macros", "io-util", "fs"] }
